--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -4,33 +4,4 @@
     Welcome to {{ title }}!
   </h1>
 </div>
-<div class="container">
-  <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
-    <div class="form-group">
-      <label for="">Name</label>
-      <input type="text" class="form-control" name="name" ngModel>
-    </div>
-    <div class="form-group">
-      <label for="">Email</label>
-      <input type="text" class="form-control" name="email" ngModel>
-    </div>
-    <div ngModelGroup="adress">
-      <div class="form-group">
-        <label for="">Street</label>
-        <input type="text" class="form-control" name="street" ngModel>
-      </div>
-      <div class="form-group">
-        <label for="">City</label>
-        <input type="text" class="form-control" name="city" ngModel>
-      </div>
-      <div class="form-group">
-        <label for="">Postal code</label>
-        <input type="text" class="form-control" name="postalCode" ngModel>
-      </div>
-    </div>
-    <button type="submit" class="btn btn-primary">
-      Submit
-    </button>
-  </form>
-</div>
-<my-toturial></my-toturial>
+<router-outlet></router-outlet>
