Add Backup day 3 from ubuntu.

--- a/my-app/src/app/shared/components/header/header.component.html
+++ b/my-app/src/app/shared/components/header/header.component.html
@@ -1,3 +1,32 @@
-<p>
-  header works!
-</p>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <li class="active">
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="#">Teams</a>
+      </li>
+      <li>
+        <a href="#">About us</a>
+      </li>
+      <li>
+        <a href="#">Log in</a>
+      </li>
+      <li>
+        <a href="#">Log out</a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav nav-social">
+      <li class="icon-soical">
+        <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
+      </li>
+      <li class="icon-soical">
+        <a href="#" class="fa fa-twitter" aria-hidden="true"></a>
+      </li>
+      <li class="icon-soical">
+        <a href="#" class="fa fa-linkedin" aria-hidden="true"></a>
+      </li>
+    </ul>
+  </div>
+</nav>
