--- a/my-app/src/app/shared/components/main-layout/main-layout.component.html
+++ b/my-app/src/app/shared/components/main-layout/main-layout.component.html
@@ -1,3 +1,13 @@
-<p>
-  main-layout works!
-</p>
+<!-- Section banner -->
+<div class="container">
+  <app-banner></app-banner>
+
+  <!-- Section header -->
+  <app-header></app-header>
+
+  <!-- content -->
+  <router-outlet></router-outlet>
+
+  <!-- Section footer -->
+  <app-footer></app-footer>
+</div>
