--- a/my-app/src/app/shared/components/search/search.component.html
+++ b/my-app/src/app/shared/components/search/search.component.html
@@ -1,3 +1,10 @@
-<p>
-  search works!
-</p>
+<div class="row">
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 search">
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Search for...">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="button">Go!</button>
+      </span>
+    </div>
+  </div>
+</div>
