--- a/my-app/src/app/team/pages/team/team.component.html
+++ b/my-app/src/app/team/pages/team/team.component.html
@@ -1,3 +1,10 @@
-<p>
-  team works!
-</p>
+<div class="row">
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+    <h2 class="title">V-league Teams</h2>
+  </div>
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+    <app-search></app-search>
+  </div>
+</div>
+<hr>
+<app-team-list></app-team-list>
