--- a/my-app/src/app/shared/components/footer/footer.component.html
+++ b/my-app/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,44 @@
-<p>
-  footer works!
-</p>
+<div class="content">
+</div>
+    <footer id="myFooter">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h2 class="logo"><a href="#"></a></h2>
+                </div>
+                <div class="col-sm-2">
+                    <h5>Category</h5>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Teams</a></li>
+                        <li><a href="#">About us</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <h5>Management</h5>
+                    <ul>
+                        <li><a href="#">V-league</a></li>
+                        <li><a href="#">V-league 1</a></li>
+                        <li><a href="#">V-league 2</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <h5>Follow us</h5>
+                    <ul class="social-networks">
+                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <h5></h5>
+                    <ul class="social-networks">
+                        <button type="button" class="btn btn-default">Contact us</button>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <p>© 2018 Copyright Khanh Nguyen </p>
+        </div>
+    </footer>
