--- a/my-app/src/app/team/components/team-list/team-list.component.html
+++ b/my-app/src/app/team/components/team-list/team-list.component.html
@@ -1,3 +1,29 @@
-<p>
-  team-list works!
-</p>
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Postion</th>
+      <th>Club name</th>
+      <th>Played</th>
+      <th>Won</th>
+      <th>Drawn</th>
+      <th>Lost</th>
+      <th>Points</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let team of teams">
+      <td>{{team.position}}</td>
+      <td>{{team.name}}</td>
+      <td>{{team.played}}</td>
+      <td>{{team.won}}</td>
+      <td>{{team.drawn}}</td>
+      <td>{{team.lost}}</td>
+      <td>{{team.point}}</td>
+      <td>
+        <button type="button" class="btn btn-info" (click)="goToTeam(team.id)">Detail</button>
+      </td>
+    </tr>
+
+  </tbody>
+</table>
