--- a/my-app/src/app/player/components/player-list/player-list.component.html
+++ b/my-app/src/app/player/components/player-list/player-list.component.html
@@ -1,3 +1,34 @@
-<p>
-  player-list works!
-</p>
+<table class="table table-bordered">
+  <thead>
+    <tr>
+      <th>Number</th>
+      <th>Full name</th>
+      <th>Position</th>
+      <th>Height</th>
+      <th>Weight</th>
+      <th>Day of birthday</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let player of players">
+      <td>{{player.number}}</td>
+      <td>{{player.name}}</td>
+      <td>{{player.position}}</td>
+      <td>{{player.height}}</td>
+      <td>{{player.weight}}</td>
+      <td>{{player.birthday | date:'medium'}}</td>
+      <td class="tdButton">
+        <button type="button" class="btn btn-info btnAction" (click)="goToTeam(team.id)">Detail</button>
+        <button type="button" class="btn btn-warning btnAction" (click)="goToTeam(team.id)">Edit</button>
+        <button type="button" class="btn btn-danger btnAction" (click)="goToTeam(team.id)">Delete</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 btnBack">
+    <button type="button" class="btn btn-primary" (click)="goHome()">Back</button>
+  </div>
+</div>
