--- a/my-app/src/app/player/pages/player-detail/player-detail.component.html
+++ b/my-app/src/app/player/pages/player-detail/player-detail.component.html
@@ -1,3 +1,90 @@
-<p>
-  player-detail works!
-</p>
+<div class="container bootstrap snippet">
+  <div class="row">
+    <div class="col-sm-3"><!--left col-->
+
+    <div class="text-center">
+      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/bpartridge/128.jpg" class="avatar img-circle img-thumbnail" alt="avatar">
+      <h6>Upload a different photo...</h6>
+      <input type="file" class="text-center center-block file-upload">
+    </div>
+   
+     <hr><br>
+      </div><!--/col-3-->
+    <div class="col-sm-9">
+        <div class="tab-content">
+          <div class="tab-pane active" id="home">
+              <h2>Player Profile</h2>
+              <hr>
+                <form class="form" action="##" method="post" id="registrationForm">
+                    <div class="form-group">
+                        
+                        <div class="col-xs-6">
+                            <label for="full_name"><h4>Full name</h4></label>
+                            <input type="text" class="form-control" name="full_name" id="full_name" placeholder="full name" title="enter your full name if any.">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        
+                        <div class="col-xs-6">
+                          <label for="position"><h4>Position</h4></label>
+                            <input type="text" class="form-control" name="position" id="position" placeholder="Position" title="enter your position if any.">
+                        </div>
+                    </div>
+        
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                            <label for="number"><h4>Number</h4></label>
+                            <input type="text" class="form-control" name="number" id="number" placeholder="Enter number" title="enter your number if any.">
+                        </div>
+                    </div>
+        
+                    <div class="form-group">
+                        <div class="col-xs-6">
+                           <label for="mobile"><h4>Mobile</h4></label>
+                            <input type="text" class="form-control" name="mobile" id="mobile" placeholder="enter mobile number" title="enter your mobile number if any.">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        
+                        <div class="col-xs-6">
+                            <label for="email"><h4>Email</h4></label>
+                            <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com" title="enter your email.">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        
+                        <div class="col-xs-6">
+                            <label for="email"><h4>Location</h4></label>
+                            <input type="email" class="form-control" id="location" placeholder="somewhere" title="enter a location">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        
+                        <div class="col-xs-6">
+                            <label for="password"><h4>Password</h4></label>
+                            <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password.">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        
+                        <div class="col-xs-6">
+                          <label for="password2"><h4>Verify</h4></label>
+                            <input type="password" class="form-control" name="password2" id="password2" placeholder="password2" title="enter your password2.">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                         <div class="col-xs-12 btSaveCancel">
+                              <br>
+                              <button class="btn btn-lg btn-success btnForm" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+                              <button class="btn btn-lg btnForm" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
+                          </div>
+                    </div>
+              </form>
+            
+            <hr>
+            
+           </div><!--/tab-pane-->
+          </div><!--/tab-content-->
+
+      </div><!--/col-9-->
+  </div><!--/row-->
