--- a/my-app/src/app/player/pages/player-detail/player-detail.component.html
+++ b/my-app/src/app/player/pages/player-detail/player-detail.component.html
@@ -7,7 +7,7 @@
       <h6>Upload a different photo...</h6>
       <input type="file" class="text-center center-block file-upload">
     </div>
-   
+
      <hr><br>
       </div><!--/col-3-->
     <div class="col-sm-9">
@@ -15,61 +15,45 @@
           <div class="tab-pane active" id="home">
               <h2>Player Profile</h2>
               <hr>
-                <form class="form" action="##" method="post" id="registrationForm">
+              <form class="form" [formGroup]="playerForm" (ngSubmit)="onSubmit(playerForm.value)">
+
+                <!-- <form class="form" [formGroup]="playerForm" (ngSubmit)="onSubmit(playerForm.value)"> -->
                     <div class="form-group">
-                        
                         <div class="col-xs-6">
                             <label for="full_name"><h4>Full name</h4></label>
-                            <input type="text" class="form-control" name="full_name" id="full_name" placeholder="full name" title="enter your full name if any.">
+                            <input type="text" class="form-control" name="name" id="name" formControlName="name" placeholder="full name" title="enter your full name if any.">
                         </div>
                     </div>
                     <div class="form-group">
-                        
                         <div class="col-xs-6">
                           <label for="position"><h4>Position</h4></label>
-                            <input type="text" class="form-control" name="position" id="position" placeholder="Position" title="enter your position if any.">
+                            <input type="text" class="form-control" name="position" id="position" formControlName="position" placeholder="Position" title="enter your position if any.">
                         </div>
                     </div>
-        
+
                     <div class="form-group">
                         <div class="col-xs-6">
                             <label for="number"><h4>Number</h4></label>
-                            <input type="text" class="form-control" name="number" id="number" placeholder="Enter number" title="enter your number if any.">
+                            <input type="text" class="form-control" name="number" id="number" formControlName="number" placeholder="Enter number" title="enter your number if any.">
                         </div>
                     </div>
-        
+
                     <div class="form-group">
                         <div class="col-xs-6">
-                           <label for="mobile"><h4>Mobile</h4></label>
-                            <input type="text" class="form-control" name="mobile" id="mobile" placeholder="enter mobile number" title="enter your mobile number if any.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                            <label for="email"><h4>Email</h4></label>
-                            <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com" title="enter your email.">
+                           <label for="height"><h4>Height</h4></label>
+                            <input type="text" class="form-control" name="height" id="height" formControlName="height" placeholder="enter height" title="enter your height if any.">
                         </div>
                     </div>
                     <div class="form-group">
-                        
                         <div class="col-xs-6">
-                            <label for="email"><h4>Location</h4></label>
-                            <input type="email" class="form-control" id="location" placeholder="somewhere" title="enter a location">
+                            <label for="weight"><h4>weight</h4></label>
+                            <input type="weight" class="form-control" name="weight" id="weight" formControlName="weight" placeholder="Your weight" title="enter weight.">
                         </div>
                     </div>
                     <div class="form-group">
-                        
                         <div class="col-xs-6">
-                            <label for="password"><h4>Password</h4></label>
-                            <input type="password" class="form-control" name="password" id="password" placeholder="password" title="enter your password.">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        
-                        <div class="col-xs-6">
-                          <label for="password2"><h4>Verify</h4></label>
-                            <input type="password" class="form-control" name="password2" id="password2" placeholder="password2" title="enter your password2.">
+                            <label for="birthday"><h4>Birthday</h4></label>
+                            <input type="text" class="form-control" id="birthday" placeholder="birthday" formControlName="birthday" title="enter  birthday">
                         </div>
                     </div>
                     <div class="form-group">
@@ -80,9 +64,9 @@
                           </div>
                     </div>
               </form>
-            
+
             <hr>
-            
+
            </div><!--/tab-pane-->
           </div><!--/tab-content-->
 
