--- a/my-app/src/app/team/components/team-detail/team-detail.component.html
+++ b/my-app/src/app/team/components/team-detail/team-detail.component.html
@@ -16,7 +16,7 @@
 <hr>
 <div class="row">
   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-    <button type="button" class="btn btn-primary">Add Player</button>
+    <button type="button" class="btn btn-primary" (click)="addPlayer()">Add Player</button>
   </div>
   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
     <app-search></app-search>
