--- a/my-app/src/app/player/pages/player-detail/player-detail.component.html
+++ b/my-app/src/app/player/pages/player-detail/player-detail.component.html
@@ -3,11 +3,10 @@
     <div class="col-sm-3"><!--left col-->
 
     <div class="text-center">
-      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/bpartridge/128.jpg" class="avatar img-circle img-thumbnail" alt="avatar">
+      <img src={{urlAvatar}} class="avatar img-circle img-thumbnail" alt="avatar">
       <h6>Upload a different photo...</h6>
       <input type="file" class="text-center center-block file-upload">
     </div>
-
      <hr><br>
       </div><!--/col-3-->
     <div class="col-sm-9">
@@ -60,7 +59,7 @@
                          <div class="col-xs-12 btSaveCancel">
                               <br>
                               <button class="btn btn-lg btn-success btnForm" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                              <button class="btn btn-lg btnForm" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
+                              <button class="btn btn-lg btnForm" (click)="onCancel()"><i class="glyphicon glyphicon-repeat"></i> Cancel</button>
                           </div>
                     </div>
               </form>
