--- a/my-app/src/app/team/pages/team/team.component.html
+++ b/my-app/src/app/team/pages/team/team.component.html
@@ -3,7 +3,7 @@
     <h2 class="title">V-league Teams</h2>
   </div>
   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-    <app-search></app-search>
+    <app-search (keyup)="onKey($event)"></app-search>
   </div>
 </div>
 <hr>
